fix broken css
- remove extra li's 
- li's need to be 2 over from ul
- nothing between rows and columns

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -41,13 +41,15 @@ img {
   padding:1%;
 }
 
-
+.panel-title {
+  color: lightblue;
+  }
 
 .well {
   margin-left: auto;
   margin-right: auto;
   max-width: 500px;
-  padding: 0px;
+  color:black;
   }
 
 .center-picture {
@@ -58,17 +60,17 @@ img {
 }
 .panel {
   color: whitesmoke;
-  background-color: #1B3C75;
 }
 
-// .panel-body {
-//   color: whitesmoke;
-//   background-color: #1B3C75;
-//   margin-left: auto;
-//   margin-right: auto;
-//   max-width: 500px;
-//   padding: 0px;
-// }
+ .panel-body {
+   color: whitesmoke;
+   background-color: #1B3C75;
+   margin-left: auto;
+   margin-right: auto;
+   max-width: 500px;
+   padding: 0px;
+ }
+
 
 div > a > img {
   border-radius: 25px;
